<resources>
    <string name="app_name">Liga da Justiça</string>
    <string name="txt1">Vizualizar heróis</string>
    <string name="rdbBtm">Batman</string>
    <string name="rdbFls">Flash</string>
    <string name="rdbSpm">Superman</string>
    <string name="rdbMM">Mulher Maravilha</string>
    <string name="btn1">Vizualizar</string>
    <string name="txtNome">Nome:</string>
    <string name="txtCod">Codinome:</string>
    <string name="txtEsp">Espécie:</string>
    <string name="txtHab">Habilidades:</string>
    <string name="txtVul">Vulnerabilidades:</string>
    <string name="txtEquip">Equipamentos:</string>
    <string name="txtBtm1">Bruce Wayne</string>
    <string name="txtBtm2">Batman</string>
    <string name="txtBtm3">Humano</string>
    <string name="txtBtm4">Inteligência avançada \nConhecimento de artes marciais \nPorte físico</string>
    <string name="txtBtm5">Ser mortal</string>
    <string name="txtBtm6">Cinto de utilidades - Um cinto cheio de objetos para ajudar no combate \nOutros</string>
    <string name="txtFls1">Barry Allen</string>
    <string name="txtFls2">Flash</string>
    <string name="txtFls3">Humano modificado</string>
    <string name="txtFls4">Super velocidade \nReflexos avançados</string>
    <string name="txtFls5">Ser mortal</string>
    <string name="txtFls6">Traje do Flash God - Um traje adaptado para suportar altas velocidades</string>
    <string name="txtSpm1">Kal-El (Krypton) \nClark Kent (Terra)</string>
    <string name="txtSpm2">Superman</string>
    <string name="txtSpm3">Kryptoniano</string>
    <string name="txtSpm4">Super força \nSuper agilidade \nVoo \nVisão de calor \nSopro congelante \nSuper sentidos</string>
    <string name="txtSpm5">Kryptonita</string>
    <string name="txtSpm6">Nenhum</string>
    <string name="txtMM1">Diana Prince</string>
    <string name="txtMM2">Wonder Woman</string>
    <string name="txtMM3">Amazona</string>
    <string name="txtMM4">Super força \nVoo</string>
    <string name="txtMM5">Ser mortal</string>
    <string name="txtMM6">Laço da Verdade - Um laço, que além de prender os inimigos, os faz falar a verdade \nBraceletes - Braceletes indestrutíveis, usados principalmente para se proteger de balas</string>
    <string name="btnVerMais">VER MAIS</string>
</resources>
